Improve user resource endpoints responses and API documentation
