# lib/httpServer/index.js
@@ -184,6 +184,19 @@ class HTTPServer {
             }
         }));
 
+        this.app.get('/users', (process.env.ENV == 'development' ? (req, res, next) => next() : createUserLimiter), asyncHandler(async (req, res) => {
+            if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
+            
+            try {
+                const users = await authService.getUsers(req.user);
+
+                res.status(200).json(users.map(projection.user));
+            } catch (ex) {
+                if (ex instanceof AuthorizationError) throw new HTTPError(403, ex.message, null, ex);
+                else throw ex;
+            }
+        }));
+
         this.app.post('/users', (process.env.ENV == 'development' ? (req, res, next) => next() : createUserLimiter), asyncHandler(async (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
 
@@ -195,7 +208,7 @@ class HTTPServer {
             try {
                 const userCreated = await authService.createUser(email, password);
 
-                res.status(200).json(projection.userCreationResult(userCreated));
+                res.status(200).json(projection.user(userCreated));
             } catch (ex) {
                 if (ex instanceof InvalidOperationError) throw new HTTPError(400, ex.message, null, ex);
                 else throw ex;
@@ -214,7 +227,7 @@ class HTTPServer {
             try {
                 const userUpdated = await authService.updateUser(req.user, email, password, type);
 
-                res.status(200).json(projection.userUpdationResult(userUpdated));
+                res.status(200).json(projection.user(userUpdated));
             } catch (ex) {
                 if (ex instanceof InvalidOperationError) throw new HTTPError(400, ex.message, null, ex);
                 if (ex instanceof AuthorizationError) throw new HTTPError(403, ex.message, null, ex);
